finished day 23, started on day 24 part 1

--- a/Day 23 - Coprocessor Conflagration.ipynb
+++ b/Day 23 - Coprocessor Conflagration.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
        " defaultdict(int, {'jnz': 6110, 'mul': 3025, 'set': 6167, 'sub': 9187}))"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,96 +147,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 1, 'd': 2, 'e': 16667, 'g': 2})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 1, 'd': 2, 'e': 33334, 'g': 33334})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 1, 'd': 2, 'e': 50000, 'g': -5700})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 2, 'e': 66667, 'g': 66667})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 2, 'e': 83333, 'g': 60966})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 2, 'e': 100000, 'g': 2})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 3, 'e': 10968, 'g': -94732})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 3, 'e': 27635, 'g': -22798})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 3, 'e': 44301, 'g': 132903})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 3, 'e': 60968, 'g': -44732})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 3, 'e': 77635, 'g': 127202})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 3, 'e': 94301, 'g': 282903})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 4, 'e': 5269, 'g': 4})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 4, 'e': 21936, 'g': 21936})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 4, 'e': 38602, 'g': 4})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 4, 'e': 55269, 'g': 55269})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 4, 'e': 71935, 'g': 182040})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 4, 'e': 88602, 'g': 4})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 4, 'e': 105269, 'g': 105269})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 5, 'e': 16237, 'g': -24520})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 5, 'e': 32903, 'g': -72797})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 5, 'e': 49570, 'g': 142145})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 5, 'e': 66236, 'g': 331180})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 5, 'e': 82903, 'g': -22797})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 5, 'e': 99570, 'g': 392145})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 6, 'e': 10537, 'g': -42478})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 6, 'e': 27204, 'g': 6})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 6, 'e': 43871, 'g': 43871})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 6, 'e': 60537, 'g': 257522})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 6, 'e': 77204, 'g': 6})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 6, 'e': 93871, 'g': 93871})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 7, 'e': 4839, 'g': -71834})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 7, 'e': 21505, 'g': -84195})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 7, 'e': 38172, 'g': 161497})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 7, 'e': 54838, 'g': 383866})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 7, 'e': 71505, 'g': -34195})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 7, 'e': 88172, 'g': 511497})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 7, 'e': 104838, 'g': 733866})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 8, 'e': 15806, 'g': 8})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 8, 'e': 32473, 'g': 32473})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 8, 'e': 49139, 'g': 287412})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 8, 'e': 65806, 'g': 8})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 8, 'e': 82473, 'g': 82473})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 8, 'e': 99139, 'g': 687412})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 9, 'e': 10107, 'g': 90963})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 9, 'e': 26774, 'g': -78926})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 9, 'e': 43441, 'g': 285260})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 9, 'e': 60107, 'g': 540963})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 9, 'e': 76774, 'g': -28926})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 9, 'e': 93441, 'g': 735260})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 10, 'e': 4408, 'g': -61620})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 10, 'e': 21075, 'g': 21075})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 10, 'e': 37741, 'g': 271710})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 10, 'e': 54408, 'g': 10})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 10, 'e': 71075, 'g': 71075})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 10, 'e': 87741, 'g': 771710})\n",
-      "defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 0, 'd': 10, 'e': 104408, 'g': 10})\n"
+      "1 defaultdict(<class 'int'>, {'a': 1, 'b': 57}) defaultdict(<class 'int'>, {'set': 1})\n",
+      "2 defaultdict(<class 'int'>, {'a': 1, 'b': 57, 'c': 57}) defaultdict(<class 'int'>, {'set': 2})\n",
+      "3 defaultdict(<class 'int'>, {'a': 1, 'b': 5700, 'c': 57}) defaultdict(<class 'int'>, {'set': 2, 'jnz': 1, 'mul': 1})\n",
+      "4 defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 57}) defaultdict(<class 'int'>, {'set': 2, 'jnz': 1, 'mul': 1, 'sub': 1})\n",
+      "5 defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 105700}) defaultdict(<class 'int'>, {'set': 3, 'jnz': 1, 'mul': 1, 'sub': 1})\n",
+      "6 defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700}) defaultdict(<class 'int'>, {'set': 3, 'jnz': 1, 'mul': 1, 'sub': 2})\n",
+      "7 defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 1}) defaultdict(<class 'int'>, {'set': 4, 'jnz': 1, 'mul': 1, 'sub': 2})\n",
+      "8 defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 1, 'd': 2}) defaultdict(<class 'int'>, {'set': 5, 'jnz': 1, 'mul': 1, 'sub': 2})\n",
+      "9 defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 1, 'd': 2, 'e': 2}) defaultdict(<class 'int'>, {'set': 6, 'jnz': 1, 'mul': 1, 'sub': 2})\n",
+      "10 defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 1, 'd': 2, 'e': 2, 'g': 2}) defaultdict(<class 'int'>, {'set': 7, 'jnz': 1, 'mul': 1, 'sub': 2})\n",
+      "11 defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 1, 'd': 2, 'e': 2, 'g': 4}) defaultdict(<class 'int'>, {'set': 7, 'jnz': 1, 'mul': 2, 'sub': 2})\n",
+      "12 defaultdict(<class 'int'>, {'a': 1, 'b': 105700, 'c': 122700, 'f': 1, 'd': 2, 'e': 2, 'g': -105696}) defaultdict(<class 'int'>, {'set': 7, 'jnz': 1, 'mul': 2, 'sub': 3})\n"
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m----------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                    Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-44-d2c696351ac4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     55\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mregisters\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 57\u001b[0;31m \u001b[0mpart_one\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpuzzle_input\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-44-d2c696351ac4>\u001b[0m in \u001b[0;36mpart_one\u001b[0;34m(instructions, verbose)\u001b[0m\n\u001b[1;32m     33\u001b[0m             \u001b[0mregisters\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0mfunc\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"mul\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 35\u001b[0;31m             \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mregisters\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mstr\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     36\u001b[0m             \u001b[0mregisters\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mregisters\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0mfunc\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"sub\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
+     "data": {
+      "text/plain": [
+       "(defaultdict(int,\n",
+       "             {'a': 1,\n",
+       "              'b': 105700,\n",
+       "              'c': 122700,\n",
+       "              'd': 2,\n",
+       "              'e': 2,\n",
+       "              'f': 1,\n",
+       "              'g': -105696}),\n",
+       " defaultdict(int, {'jnz': 1, 'mul': 2, 'set': 7, 'sub': 3}))"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "from collections import defaultdict\n",
     "\n",
-    "def part_one(instructions, verbose=False):\n",
+    "def part_two(instructions, verbose=False):\n",
     "    \"\"\"goes through instructions and perfoms them as per part one\"\"\"\n",
     "    \n",
     "    registers = defaultdict(int)\n",
-    "    registers[\"a\"] = 1\n",
+    "    registers['a'] = 1\n",
     "    i = 0\n",
-    "    loops = 0\n",
     "    total_instructions = len(instructions)\n",
+    "    func_call_counter = defaultdict(int)\n",
+    "    loops = 0\n",
     "    \n",
     "    while i >=0 and i < total_instructions:\n",
     "        \n",
@@ -244,6 +206,7 @@
     "        f = instructions[i].split()\n",
     "        if verbose: print(i, f)\n",
     "        func = f[0]\n",
+    "        func_call_counter[func] += 1\n",
     "        \n",
     "        try:\n",
     "            x = int(f[1])\n",
@@ -276,20 +239,21 @@
     "                \n",
     "        i += 1\n",
     "        loops += 1\n",
-    "        if loops % 100_000 == 0:\n",
-    "            print(registers)\n",
-    "        if loops > 10_000_000:\n",
-    "            break\n",
+    "        \n",
+    "        if loops % 1 ==0:\n",
+    "            print(loops, registers, func_call_counter)\n",
+    "        if loops > 11: break\n",
+    "    return registers, func_call_counter\n",
     "\n",
-    "    return registers\n",
-    "\n",
-    "part_one(puzzle_input, verbose=False)"
+    "part_two(puzzle_input, verbose=False)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "So it looks like we loop from the register b at `105700` to c at `122700` in increments of 17. h is incremented if the number is prime.\n",
+    "\n",
     "looking at how to optimize this:"
    ]
   },
@@ -303,42 +267,77 @@
     "- 'set c b',\n",
     "- 'jnz a 2',\n",
     "- 'jnz 1 5',\n",
-    "    - 'mul b 100',\n",
-    "    - 'sub b -100000',\n",
-    "    - 'set c b',\n",
-    "    - 'sub c -17000',\n",
-    "- 'set f 1',\n",
-    "- 'set d 2',\n",
+    "- 'mul b 100',\n",
+    "- 'sub b -100000',\n",
+    "- 'set c b',\n",
+    "- 'sub c -17000',\n",
+    "    - 'set f 1',\n",
+    "    - 'set d 2',\n",
     "    - 'set e 2',\n",
     "        - 'set g d',\n",
-    "        - 'mul g e',\n",
-    "        - 'sub g b',\n",
+    "        - 'mul g e', # so if d times e == b\n",
+    "        - 'sub g b', # if g == b then g is zero\n",
     "        - 'jnz g 2',\n",
-    "            - 'set f 0',\n",
+    "            - 'set f 0', # if becomes zero if g is zero\n",
     "        - 'sub e -1',\n",
     "        - 'set g e',\n",
     "        - 'sub g b',\n",
-    "    - 'jnz g -8',\n",
-    "        - 'sub d -1',\n",
-    "        - 'set g d',\n",
-    "        - 'sub g b',\n",
+    "        - 'jnz g -8',\n",
+    "    - 'sub d -1',\n",
+    "    - 'set g d',\n",
+    "    - 'sub g b',\n",
     "- 'jnz g -13',\n",
-    "- 'jnz f 2',\n",
+    "- 'jnz f 2', # so if f is zero, add 1 to h\n",
     "    - 'sub h -1',\n",
     "- 'set g b',\n",
     "- 'sub g c',\n",
     "- 'jnz g 2',\n",
     "- 'jnz 1 3',\n",
-    "- 'sub b -17',\n",
+    "- 'sub b -17', # adding 17 to b\n",
     "- 'jnz 1 -23'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "915"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def is_prime(n):\n",
+    "    \"\"\"returns true if n is prime, false instead\"\"\"\n",
+    "    for i in range(3, n):\n",
+    "        if n % i == 0:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "b = 105700\n",
+    "c = 122700\n",
+    "add_to_b = 17\n",
+    "\n",
+    "h = 0\n",
+    "for i in range(b, c+1, add_to_b):\n",
+    "    if not is_prime(i):\n",
+    "        h += 1\n",
+    "h"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`915` is the answer. Had to look at the [reddit adventofcode forums](https://www.reddit.com/r/adventofcode/comments/7lms6p/2017_day_23_solutions/?st=je25jn8c&sh=a29d5c98) for help on this one."
+   ]
   }
  ],
  "metadata": {
