--- a/Day 01 - Inverse Captcha.ipynb
+++ b/Day 01 - Inverse Captcha.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "9"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
        "1171"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And that passes the advent test! Some thoughts:\n",
+    "`1171` passes the advent test! Some thoughts:\n",
     "\n",
     "- there must be a less verbose way of writing the function\n",
     "\n",
@@ -141,56 +141,43 @@
     "- 123123 produces 12.\n",
     "- 12131415 produces 4.\n",
     "\n",
-    "What is the solution to your new captcha?"
+    "**What is the solution to your new captcha?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First up, looking at how to generate the digit halfway around:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 3.0\n",
-      "1 4.0\n",
-      "2 5.0\n",
-      "3 0.0\n",
-      "4 1.0\n",
-      "5 2.0\n"
+      "0 3\n",
+      "1 4\n",
+      "2 5\n",
+      "3 0\n",
+      "4 1\n",
+      "5 2\n"
      ]
     }
    ],
    "source": [
     "l = 6\n",
     "for i in range(l):\n",
-    "    print(i, (i+l/2)%l)"
+    "    print(i, (i+l//2)%l)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "6//3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +186,7 @@
        "6"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +253,7 @@
        "1024"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,9 +266,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Yay! Day 1 finished. Notes for part 2:\n",
+    "Yay! `1024` worked! Day 1 finished. Notes for part 2:\n",
     "\n",
-    "- "
+    "- quite easy, but it was day one. \n",
+    "- can I use [itertools.cycle](https://docs.python.org/3/library/itertools.html#itertools.cycle) for part one? \n",
+    "- there must be a faster way to figure out cicular lists as I'm doing a addition, division and mod to figure it out, which is a lot of operations."
    ]
   }
  ],
@@ -301,7 +290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
