started stack & graph based solution for day 24

--- a/Day 24 - Electromagnetic Moat.ipynb
+++ b/Day 24 - Electromagnetic Moat.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
        "[[48, 5], [25, 10], [35, 49], [34, 41], [35, 35], [47, 35]]"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
        "[[0, 2], [2, 2], [2, 3], [3, 4], [3, 5], [0, 1], [10, 1], [9, 10]]"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,12 +137,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Recursive solution for part one:"
+    "## Recursive solution for part one:\n",
+    "\n",
+    "This looks like a classic build a graph problem where the edges go both ways and the weights for each edge is the sum of the nodes:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -158,25 +160,29 @@
        "([0, 1, 10, 1, 9, 10], 31)"
       ]
      },
-     "execution_count": 250,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def strongest_bridge(last=0, comps=test_input):\n",
-    "    \"\"\"takes in a start port and a list of components and returns the strongest bridge\"\"\"\n",
-    "    bridge = []\n",
-    "    score = 0\n",
+    "    \"\"\"takes in a port to connect the next component to \n",
+    "    and a list of remaining components and returns the strongest bridge\"\"\"\n",
+    "    the_bridge_we_are_looking_for = []\n",
+    "    high_score = 0\n",
     "    \n",
     "    for i, comp in enumerate(comps):\n",
     "        if comp[0] == last or comp[1] == last:\n",
     "            # make a bridge recursively, passing in the list of components minus current component\n",
-    "            x = comp + strongest_bridge(comp[1] if comp[0] == last else comp[0], comps[:i]+comps[i+1:])\n",
-    "            if sum(x) > score: # we want to return the strongest bridge\n",
-    "                score = sum(x)\n",
-    "                bridge = x    \n",
-    "    return bridge\n",
+    "            next_port = comp[1] if comp[0] == last else comp[0]\n",
+    "            new_bridge = comp + strongest_bridge(next_port, comps[:i]+comps[i+1:])\n",
+    "            \n",
+    "            if sum(new_bridge) > high_score: # we want to return the strongest bridge\n",
+    "                high_score = sum(new_bridge)\n",
+    "                the_bridge_we_are_looking_for = new_bridge    \n",
+    "    \n",
+    "    return the_bridge_we_are_looking_for\n",
     "\n",
     "print(test_input)\n",
     "b = strongest_bridge(0, test_input)\n",
@@ -192,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +207,7 @@
        "1656"
       ]
      },
-     "execution_count": 251,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,14 +218,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.97 s ± 1.26 s per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "5.44 s ± 512 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -233,7 +239,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The answer is `1656` but the recursive solution is very slow, taking 6 seconds for a pretty small input of only 54 connectors."
+    "The answer is `1656` but the recursive solution is very slow, taking ~6 seconds for a pretty small input of only 54 connectors."
    ]
   },
   {
@@ -265,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -281,30 +287,36 @@
        "([0, 2, 2, 2, 2, 3, 3, 5], 19)"
       ]
      },
-     "execution_count": 243,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def strongest_bridge(last=0, comps=test_input):\n",
-    "    \"\"\"takes in a start port and a list of connectors and returns the strongest bridge\"\"\"\n",
-    "    bridge = []\n",
-    "    score = 0\n",
-    "    long = 0\n",
+    "    \"\"\"takes in a port to connect the next component to \n",
+    "    and a list of remaining components and returns the longest strongest bridge\"\"\"\n",
+    "    the_bridge_we_are_looking_for = []\n",
+    "    high_score = 0\n",
+    "    longest_length = 0\n",
     "    \n",
     "    for i, comp in enumerate(comps):\n",
     "        if comp[0] == last or comp[1] == last:\n",
-    "            x = comp + strongest_bridge(comp[1] if comp[0] == last else comp[0], comps[:i]+comps[i+1:])\n",
-    "            if len(x) > long: # if longer bridge found use that one regardless of score\n",
-    "                score = sum(x)\n",
-    "                long = len(x)\n",
-    "                bridge = x\n",
-    "            elif len(x) == long: # store the stronger bridge when same length\n",
-    "                if sum(x) > score:\n",
-    "                    bridge = x\n",
-    "                    score = sum(x)\n",
-    "    return bridge\n",
+    "            # make a bridge recursively, passing in the list of components minus current component\n",
+    "            next_port = comp[1] if comp[0] == last else comp[0]\n",
+    "            new_bridge = comp + strongest_bridge(next_port, comps[:i]+comps[i+1:])\n",
+    "            \n",
+    "            if len(new_bridge) > longest_length: # save longest bridge found\n",
+    "                high_score = sum(new_bridge)\n",
+    "                longest_length = len(new_bridge)\n",
+    "                the_bridge_we_are_looking_for = new_bridge\n",
+    "            \n",
+    "            elif len(new_bridge) == longest_length: # if same length, save stronger bridge\n",
+    "                if sum(new_bridge) > high_score:\n",
+    "                    the_bridge_we_are_looking_for = new_bridge\n",
+    "                    high_score = sum(new_bridge)\n",
+    "            \n",
+    "    return the_bridge_we_are_looking_for\n",
     "\n",
     "print(test_input)\n",
     "b = strongest_bridge(0, test_input)\n",
@@ -313,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +334,7 @@
        "1642"
       ]
      },
-     "execution_count": 244,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,6 +457,87 @@
     "print(edges)\n",
     "graph"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "to complete, but in the meantime, a start on a stack based solution:\n",
+    "\n",
+    "## Stack based solution:\n",
+    "\n",
+    "INCOMPLETE, TODO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-65-6e930d3a0318>, line 31)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-65-6e930d3a0318>\"\u001b[0;36m, line \u001b[0;32m31\u001b[0m\n\u001b[0;31m    remaining_comps = # todo\u001b[0m\n\u001b[0m                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import deque\n",
+    "from collections import defaultdict\n",
+    "\n",
+    "def bridges(port=0, comps=test_input, debug=False):\n",
+    "    \"\"\"takes in starting port & a list of components and returns all possible bridges in a list\"\"\"\n",
+    "    queue = deque()\n",
+    "\n",
+    "    graph = defaultdict(list)\n",
+    "    for edge in test_input:\n",
+    "        graph[edge[0]].append(edge)\n",
+    "    if debug: print(graph)\n",
+    "    \n",
+    "    # adding our starting components to the queue\n",
+    "    for edge in graph[port]:\n",
+    "        queue.append(edge)\n",
+    "    if debug: print(\"Starting with:\", queue)\n",
+    "        \n",
+    "    all_bridges = [] # storing all the bridges found\n",
+    "    \n",
+    "    i = 0\n",
+    "    while queue:\n",
+    "        bridge = queue.pop()\n",
+    "        if debug: print(\"Bridge:\", bridge)\n",
+    "        port = bridge[1]\n",
+    "        \n",
+    "        if bridge not in all_bridges:\n",
+    "            all_bridges.append(bridge)\n",
+    "            if debug == True: print(bridge)\n",
+    "            \n",
+    "            # now to get a list of valid components to make the bridge longer\n",
+    "            remaining_comps = # todo\n",
+    "            \n",
+    "            next_comps = [comp for comp in remaining_comps if any([p==next_port for p in comp])]\n",
+    "            \n",
+    "            for comp in next_comps:\n",
+    "                if next_port[0] == comp[0]:\n",
+    "                    next_port = comp[1] if comp[0] == next_port else comp[0]\n",
+    "                    br = bridge + comp\n",
+    "                    queue.appendleft(br)\n",
+    "        if i > 10000000:\n",
+    "            break\n",
+    "    \n",
+    "    return all_bridges\n",
+    "        \n",
+    "    \n",
+    "bridges(debug=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
