--- a/Day 25 - The Halting Problem.ipynb
+++ b/Day 25 - The Halting Problem.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
        " '    - Continue with state C.']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,6 +150,130 @@
     "    data = f.read().strip().split(\"\\n\")\n",
     "puzzle_input = [line for line in data]\n",
     "puzzle_input[:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Implement a turing machine! Sounds like fun:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Position: 0\n",
+      "State: A\n",
+      "Steps: 0\n",
+      "Checksum: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "class Turing_Machine():\n",
+    "    def __init__(self):\n",
+    "        self.tape = defaultdict(int)\n",
+    "        self.pos = 0\n",
+    "        self.state = \"A\"\n",
+    "        self.steps = 0\n",
+    "        self.funcs = {\"A\":self.A, \"B\":self.B, \"C\":self.C, \n",
+    "                      \"D\":self.D, \"E\":self.E, \"F\":self.F}\n",
+    "    \n",
+    "    def diagnostic_checksum(self):\n",
+    "        return sum([val for key, val in self.tape.items()])\n",
+    "    \n",
+    "    def step(self):\n",
+    "        new_val, pos_delta, self.state = self.funcs[self.state]()\n",
+    "        self.tape[self.pos] = new_val\n",
+    "        self.pos += pos_delta\n",
+    "        self.steps += 1\n",
+    "    \n",
+    "    def details(self):\n",
+    "        print(f\"Position: {self.pos}\")\n",
+    "        print(f\"State: {self.state}\")\n",
+    "        print(f\"Steps: {self.steps}\")\n",
+    "        print(f\"Checksum: {self.diagnostic_checksum()}\")\n",
+    "        \n",
+    "    def A(self):\n",
+    "        if self.tape[self.pos] == 0:\n",
+    "            return(1, 1, \"B\")\n",
+    "        else:\n",
+    "            return(1, -1, \"E\")\n",
+    "    \n",
+    "    def B(self):\n",
+    "        if self.tape[self.pos] == 0:\n",
+    "            return(1, 1, \"C\")\n",
+    "        else:\n",
+    "            return(1, 1, \"F\")\n",
+    "    \n",
+    "    def C(self):\n",
+    "        if self.tape[self.pos] == 0:\n",
+    "            return(1, -1, \"D\")\n",
+    "        else:\n",
+    "            return(0, 1, \"B\")\n",
+    "    \n",
+    "    def D(self):\n",
+    "        if self.tape[self.pos] == 0:\n",
+    "            return(1, 1, \"E\")\n",
+    "        else:\n",
+    "            return(0, -1, \"C\")\n",
+    "        \n",
+    "    def E(self):\n",
+    "        if self.tape[self.pos] == 0:\n",
+    "            return(1, -1, \"A\")\n",
+    "        else:\n",
+    "            return(0, 1, \"D\")\n",
+    "        \n",
+    "    def F(self):\n",
+    "        if self.tape[self.pos] == 0:\n",
+    "            return(1, 1, \"A\")\n",
+    "        else:\n",
+    "            return(1, 1, \"C\")\n",
+    "\n",
+    "turing = Turing_Machine()\n",
+    "turing.details()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Position: 2955\n",
+      "State: D\n",
+      "Steps: 12523873\n",
+      "Checksum: 4225\n"
+     ]
+    }
+   ],
+   "source": [
+    "for _ in range(12523873):\n",
+    "    turing.step()\n",
+    "turing.details()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`4225` is the right answer! that was suprisingly easy, especially after the last few puzzles.\n",
+    "\n",
+    "## Notes:\n",
+    "\n",
+    "- a way to visualize the machine? an animation to see it working?\n",
+    "- a dispatch table which can handle functions which aren't defined, though in this case only defined functions are passed to it. \n"
    ]
   },
   {
