--- a/advent2017/Day 05 - A Maze of Twisty Trampolines, All Alike.ipynb
+++ b/advent2017/Day 05 - A Maze of Twisty Trampolines, All Alike.ipynb
@@ -218,7 +218,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -232,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
